gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ${GATEWAY_NAME}
  labels:
    istio.io/enable-inference-extproc: "true"
spec:
  gatewayClassName: "istio"
  listeners:
    - port: 80
      protocol: HTTP
      name: default
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    parametersRef:
      name: ${GATEWAY_NAME}
      group: ""
      kind: ConfigMap
